Agrege la logica del servidor OpenMarketServer y OpenMarketHandler

--- a/openMarket-Server/pom.xml
+++ b/openMarket-Server/pom.xml
@@ -11,6 +11,17 @@
             <artifactId>strategyserver</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.20</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>OpenMarket-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
