Se agrego la funcionalidad de listar todas las categorias

--- a/openMarket-Client/pom.xml
+++ b/openMarket-Client/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>OpenMarket-commons</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.3</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
