--- a/openMarket-Client/pom.xml
+++ b/openMarket-Client/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.12.3</version>
         </dependency>
+        <dependency>
+            <groupId>reloj</groupId>
+            <artifactId>frameworkobsobs</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
