cambios en la base de datos

--- a/openMarket-Server/pom.xml
+++ b/openMarket-Server/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>OpenMarket-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.41.2.1</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
